--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "topthink/framework": "^6.0",
-        "mtdowling/cron-expression": "^1.2",
         "symfony/process": "^4.4",
-        "nesbot/carbon": "^2.28"
+        "nesbot/carbon": "^2.28",
+        "dragonmantank/cron-expression": "^3.0"
     },
     "autoload": {
         "psr-4": {
