--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,12 @@
     },
     "require-dev": {
         "topthink/think-swoole": "^4.0"
+    },
+    "config": {
+        "preferred-install": "dist",
+        "platform-check": false,
+        "platform": {
+            "ext-swoole": "4.6.0"
+        }
     }
 }
