--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "topthink/framework": "^6.0",
-        "symfony/process": "^4.4|^5.0",
+        "topthink/framework": "^6.0 || ^8.0",
+        "symfony/process": "^4.4 || ^5.0",
         "nesbot/carbon": "^2.28",
         "dragonmantank/cron-expression": "^3.0"
     },
