--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "topthink/framework": "^6.0 || ^8.0",
-        "symfony/process": "^4.4 || ^5.0",
+        "symfony/process": ">=4.2",
         "nesbot/carbon": "^2.28",
         "dragonmantank/cron-expression": "^3.0"
     },
